Added Hint class + refactor tests + List.of